# dumptruck

./: generate_dc_with_saxon.py  pyproject.toml  run.py
fedora/: fedora.py
metadata/: mods.xml
policies/: NAGPRA_POLICY.xml  POLICY.xml  default_policy.xml
restrict/: restrict.py
risearch/: risearch.py
