[tool.poetry]
name = "datasets_quick_and_dirty"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-magic = "^0.4.27"
lxml = "^4.9.1"
argparse = "^1.4.0"
pyyaml = "^6.0"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
